implementation de la disponibility / indisponiblity
