# foot5connect-ui/src/app/services/models/disponibility-detail-dto.ts
@@ -1,0 +1,10 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface DisponibilityDetailDto {
+  availableDate?: string;
+  endTime?: string;
+  id?: number;
+  startTime?: string;
+  userId?: number;
+}
